[gd_scene load_steps=2 format=3 uid="uid://buahqv18qlohm"]

[ext_resource type="Script" path="res://Scenes/ContentManager/Scripts/contentmanager.gd" id="1_lt3y0"]

[node name="contentmanager" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lt3y0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.5
offset_top = -33.0
offset_right = 60.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModManagerButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Mod manager"

[node name="ContentEditorButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Content editor"

[node name="OtherToolsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Other tools"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Back"

[connection signal="button_up" from="VBoxContainer/ModManagerButton" to="." method="_on_mod_manager_button_button_up"]
[connection signal="button_up" from="VBoxContainer/ContentEditorButton" to="." method="_on_content_editor_button_button_up"]
[connection signal="button_up" from="VBoxContainer/OtherToolsButton" to="." method="_on_other_tools_button_button_up"]
[connection signal="button_up" from="VBoxContainer/BackButton" to="." method="_on_back_button_button_up"]
